<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/introFragment">

    <fragment
        android:id="@+id/introFragment"
        android:name="com.baubap.android.fakelog.presentation.intro.IntroFragment"
        android:label="@string/intro_title_text"
        tools:layout="@layout/fragment_intro" >
        <action
            android:id="@+id/navToLoginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/navToSignFragment"
            app:destination="@id/signFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.baubap.android.fakelog.presentation.login.LoginFragment"
        android:label="@string/login_title_text"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/signFragment"
        android:name="com.baubap.android.fakelog.presentation.sign.SignFragment"
        android:label="@string/sign_title_text"
        tools:layout="@layout/fragment_sign" />

</navigation>